# Draenor-Core

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  revision.h.in.cmake
dep/: CMakeLists.txt  PackageList.txt
dep/SFMT/: SFMT.h
dep/acelite/ace/: Acceptor.cpp  CMakeLists.txt  Connector.cpp  OS_NS_Thread.cpp  OS_NS_arpa_inet.inl  OS_NS_sys_socket.inl
dep/acelite/ace/PrecompiledHeaders/: WinAcePCH.cpp
dep/g3dlite/: Readme.txt
dep/g3dlite/include/G3D/: Matrix3.h  System.h  platform.h
dep/g3dlite/source/: BinaryOutput.cpp  FileSystem.cpp  System.cpp
dep/zlib/: CMakeLists.txt
src/server/: CMakeLists.txt
src/server/authserver/: CMakeLists.txt  Main.cpp  authserver.conf.dist  authserver.rc
src/server/authserver/Bnet2/: Session.cpp
src/server/authserver/PrecompiledHeaders/: authPCH.h
src/server/authserver/Realms/: RealmList.cpp
src/server/authserver/Server/: AuthSocket.cpp  RealmAcceptor.h  RealmSocket.cpp
src/server/collision/: CMakeLists.txt  DynamicTree.cpp
src/server/collision/Management/: MMapManager.cpp  VMapManager2.cpp
src/server/collision/Maps/: MapTree.cpp
src/server/collision/Models/: GameObjectModel.cpp
src/server/game/: CMakeLists.txt
src/server/game/AI/: CreatureAISelector.cpp
src/server/game/Accounts/: AccountMgr.cpp  AccountMgr.h
src/server/game/Achievements/: AchievementMgr.cpp  AchievementMgr.h
src/server/game/Addons/: AddonMgr.cpp
src/server/game/Anticheat/: AnticheatMgr.cpp
src/server/game/AuctionHouse/: AuctionHouseMgr.cpp
src/server/game/BattlePay/: BattlepayMgr.cpp  BattlepayMgr.h
src/server/game/Battlefield/: Battlefield.cpp  BattlefieldHandler.cpp  BattlefieldMgr.cpp
src/server/game/Battlegrounds/: Arena.h  Battleground.cpp  BattlegroundInvitationsMgr.cpp  BattlegroundMgr.cpp  BattlegroundPacketFactory.hpp  BattlegroundScheduler.cpp
src/server/game/BlackMarket/: BlackMarketMgr.cpp
src/server/game/Calendar/: CalendarMgr.cpp
src/server/game/Chat/: Chat.cpp  ChatLink.cpp
src/server/game/Cinematic/: CinematicPathMgr.cpp
src/server/game/Combat/: ThreatManager.cpp  ThreatManager.h
src/server/game/Conditions/: ConditionMgr.cpp  ConditionMgr.h  DisableMgr.cpp
src/server/game/DataStores/: DB2Stores.cpp  DB2fmt.h  DBCStores.cpp  DBCStructure.h
src/server/game/DungeonFinding/: LFGListMgr.cpp  LFGMgr.cpp  LFGScripts.cpp
src/server/game/Events/: GameEventMgr.cpp
src/server/game/Garrison/: GarrisonMgr.cpp  GarrisonShipmentManager.cpp
src/server/game/Globals/: ObjectAccessor.cpp  ObjectAccessor.h  ObjectMgr.cpp  ObjectMgr.h
src/server/game/Grids/: GridDefines.h  GridStates.cpp  GridStates.h  NGrid.h  ObjectGridLoader.cpp
src/server/game/Groups/: Group.cpp  Group.h  GroupMgr.cpp
src/server/game/Guilds/: Guild.cpp  GuildFinderMgr.cpp  GuildMgr.cpp
src/server/game/Handlers/: AddonHandler.cpp  AuctionHouseHandler.cpp  BattleGroundHandler.cpp  CalendarHandler.cpp  CharacterHandler.cpp  ChatHandler.cpp  CombatHandler.cpp  GarrisonHandler.cpp  GroupHandler.cpp  ItemHandler.cpp  LFGHandler.cpp  LootHandler.cpp  MailHandler.cpp  MiscHandler.cpp  MovementHandler.cpp  NPCHandler.cpp  PetBattleHandler.cpp  PetHandler.cpp  PetitionsHandler.cpp  QuestHandler.cpp  SpellHandler.cpp  TaxiHandler.cpp  TradeHandler.cpp  VehicleHandler.cpp  VoidStorageHandler.cpp
src/server/game/Instances/: InstanceSaveMgr.cpp  InstanceScript.cpp  InstanceScript.h
src/server/game/Loot/: LootMgr.cpp  LootMgr.h
src/server/game/Mails/: Mail.cpp
src/server/game/Maps/: Map.cpp  Map.h  MapInstanced.cpp  MapManager.cpp  MapManager.h  PhaseMgr.cpp  PhaseMgr.h  TransportMgr.cpp
src/server/game/Miscellaneous/: Formulas.h  Language.h
src/server/game/Movement/: MotionMaster.cpp  PathGenerator.cpp
src/server/game/OutdoorPvP/: OutdoorPvP.cpp  OutdoorPvPMgr.cpp
src/server/game/PetBattle/: PetBattle.cpp  WildBattlePet.cpp
src/server/game/Pools/: PoolMgr.cpp
src/server/game/PrecompiledHeaders/: gamePCH.h
src/server/game/Quests/: QuestDef.h
src/server/game/Reputation/: ReputationMgr.cpp
src/server/game/Scripting/: MapScripts.cpp  ScriptLoader.cpp  ScriptLoader.h  ScriptMgr.cpp  ScriptSystem.cpp  ScriptUtils.h
src/server/game/Server/: IRSocket.cpp  IRSocketConnector.h  InterRealmSession.cpp  WorldPacket.cpp  WorldSession.cpp  WorldSocket.cpp  WorldSocketAcceptor.h  WorldSocketMgr.cpp
src/server/game/Skills/: ArchaeologyMgr.cpp  SkillDiscovery.cpp  SkillExtraItems.cpp
src/server/game/Spells/: Spell.cpp  Spell.h  SpellEffects.cpp  SpellInfo.cpp  SpellInfo.h  SpellMgr.cpp  SpellScript.cpp
src/server/game/Texts/: CreatureTextMgr.cpp  CreatureTextMgr.h
src/server/game/Tickets/: TicketMgr.cpp
src/server/game/Tools/: CharacterDatabaseCleaner.cpp  PlayerDump.cpp
src/server/game/Warden/: Warden.cpp  WardenCheckMgr.cpp  WardenMac.cpp  WardenWin.cpp
src/server/game/Weather/: Weather.cpp  WeatherMgr.cpp
src/server/game/World/: World.cpp  World.h  WowTime.cpp
src/server/scripts/: CMakeLists.txt
src/server/scripts/Commands/: cs_account.cpp  cs_ban.cpp  cs_character.cpp  cs_debug.cpp  cs_gobject.cpp  cs_lookup.cpp  cs_misc.cpp  cs_mmaps.cpp  cs_modify.cpp  cs_npc.cpp  cs_reload.cpp  cs_reset.cpp  cs_server.cpp
src/server/scripts/Custom/: npc_custom.cpp
src/server/scripts/Draenor/: gorgrond.cpp  spires_of_arak.cpp  talador.cpp  tanaan_jungle_100.cpp
src/server/scripts/EasternKingdoms/: CMakeLists.txt  burning_steppes.cpp  dun_morogh.cpp  elwynn_forest.cpp  stormwind_city.cpp  westfall.cpp
src/server/scripts/Events/: childrens_week.cpp
src/server/scripts/Examples/: example_spell.cpp
src/server/scripts/Fun/: fun_scripts.cpp
src/server/shared/: AutoPtr.h  CMakeLists.txt  Common.h  Containers.h  Define.h  GitRevision.cpp  GitRevision.h  SystemConfig.h
src/server/worldserver/: CMakeLists.txt  Main.cpp  Master.cpp  Master.h  worldserver.conf.dist  worldserver.rc
(+381 files in other folders)
